<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cal"
    android:padding="15dp">

    <!-- поле результата -->
    <Button
        android:id="@+id/btnSet"
        style="@style/numberButtonTheme"
        android:text="@string/buttonSet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/resultField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/operationField"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- поле знака операции -->
    <TextView
        android:id="@+id/operationField"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/resultField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- поле ввода чисел -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/numberField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:inputType="phone"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultField" />

    <LinearLayout
        android:id="@+id/firstButtonPanel"
        style="@style/linearStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberField">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn7"
            style="@style/numberButtonStyle"
            android:text="@string/button7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn8"
            style="@style/numberButtonStyle"
            android:text="@string/button8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn9"
            style="@style/numberButtonStyle"
            android:text="@string/button9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDel"
            style="@style/operationButtonStyle"
            android:text="@string/buttonDel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondButtonPanel"
        style="@style/linearStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstButtonPanel">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn4"
            style="@style/numberButtonStyle"
            android:text="@string/button4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn5"
            style="@style/numberButtonStyle"
            android:text="@string/button5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn6"
            style="@style/numberButtonStyle"
            android:text="@string/button6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUmn"
            style="@style/operationButtonStyle"
            android:text="@string/buttonUmn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdButtonPanel"
        style="@style/linearStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondButtonPanel">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            style="@style/numberButtonStyle"
            android:text="@string/button1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn2"
            style="@style/numberButtonStyle"
            android:text="@string/button2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn3"
            style="@style/numberButtonStyle"
            android:text="@string/button3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMinus"
            style="@style/operationButtonStyle"
            android:text="@string/buttonMinus" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forthButtonPanel"
        style="@style/linearStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdButtonPanel">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn0"
            style="@style/numberButtonStyle"
            android:text="@string/button0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDot"
            style="@style/numberButtonStyle"
            android:text="@string/buttonDot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlus"
            style="@style/operationButtonStyle"
            android:text="@string/buttonPlus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResult"
            style="@style/operationButtonStyle"
            android:text="@string/buttonResult" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>